font size fussing, restructure donut title

--- a/assets/covid_stylesheet.css
+++ b/assets/covid_stylesheet.css
@@ -1809,12 +1809,12 @@ pre code {
     width: 100%;
     margin-bottom: 1rem;
     color: #212529;
-    font-size: 130%
+    font-size: 110%
 }
 .table th,
 .table td {
     padding: 0.75rem;
-    vertical-align: top;
+    vertical-align: middle;
     border-top: 1px solid #dee2e6;
 }
 .table thead th {
